err/plone.recipe.zope2zeoserver.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/plone'...
Listing './lib/python3.5/site-packages/plone/recipe'...
Listing './lib/python3.5/site-packages/plone/recipe/zope2zeoserver'...
Compiling './lib/python3.5/site-packages/plone/recipe/zope2zeoserver/__init__.py'...
***   File "./lib/python3.5/site-packages/plone/recipe/zope2zeoserver/__init__.py", line 448
    os.chmod(path, 0755)
                      ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/plone/recipe/zope2zeoserver/ctl.py'...
***   File "./lib/python3.5/site-packages/plone/recipe/zope2zeoserver/ctl.py", line 38
    print 'For win32 platforms, runzeo.bat or zeoservice.exe should be used'
                                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/plone/recipe/zope2zeoserver/tests'...
Listing './lib/python3.5/site-packages/plone/recipe/zope2zeoserver/tests/zope2'...
Listing './lib/python3.5/site-packages/plone/recipe/zope2zeoserver/tests/zope2/lib'...
Listing './lib/python3.5/site-packages/plone/recipe/zope2zeoserver/tests/zope2/lib/python'...
Listing './lib/python3.5/site-packages/plone/recipe/zope2zeoserver/tests/zope2/utilities'...
Listing './lib/python3.5/site-packages/plone/recipe/zope2zeoserver/tests/zope2/utilities/ZODBTools'...
Listing './lib/python3.5/site-packages/plone.recipe.zope2zeoserver-1.5.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zc'...
Listing './lib/python3.5/site-packages/zc/buildout'...
Listing './lib/python3.5/site-packages/zc/recipe'...
Listing './lib/python3.5/site-packages/zc/recipe/egg'...
Listing './lib/python3.5/site-packages/zc.buildout-2.10.0.dist-info'...
Listing './lib/python3.5/site-packages/zc.recipe.egg-2.0.5.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
